typescript/checker/tests/conformance/statements/continueStatements/invalidSwitchContinueStatement.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            76,
        ),
        hi: BytePos(
            77,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    76,
                ),
                hi: BytePos(
                    77,
                ),
                ctxt: #0,
            },
            lit: Number(
                Number {
                    span: Span {
                        lo: BytePos(
                            76,
                        ),
                        hi: BytePos(
                            77,
                        ),
                        ctxt: #0,
                    },
                    value: 5.0,
                },
            ),
        },
    ),
    right: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    60,
                ),
                hi: BytePos(
                    62,
                ),
                ctxt: #0,
            },
            lit: Number(
                Number {
                    span: Span {
                        lo: BytePos(
                            60,
                        ),
                        hi: BytePos(
                            62,
                        ),
                        ctxt: #0,
                    },
                    value: 12.0,
                },
            ),
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/statements/continueStatements/invalidSwitchContinueStatement.ts:4:10
  |
4 |     case 5:
  |          ^

error: TS1115
 --> $DIR/tests/conformance/statements/continueStatements/invalidSwitchContinueStatement.ts:5:9
  |
5 |         continue;
  |         ^^^^^^^^^

